# itd-odd-save-manager

./: .gitattributes  .gitignore  .lintstagedrc.push.json  .oxlintrc.json  BUILDING.md  CHANGELOG.md  LICENSE.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.husky/: pre-push
scripts/: pre-push-enforce.mjs  pre-push-enforce.test.mjs  run-oxfmt-tracked.mjs  run-oxfmt-tracked.test.mjs
src/: main.ts  style.css  ui_utils.ts  watcher_init.test.ts  watcher_init.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  commands.rs  config.rs  filename_utils.rs  game_manager.rs  lib.rs  main.rs  save_paths.rs  tray.rs  watcher.rs  window.rs  wrapper_launch.rs
src-tauri/src/backup/: cleanup.rs  common.rs  create.rs  data.rs  hashing.rs  index.rs  listing.rs  mod.rs  notes.rs  restore.rs  tests.rs
src/__tests__/: dom.test.ts  main.test.ts  smoke.test.ts  style.test.ts
src/ui/: backups.test.ts  backups.ts  config.test.ts  config.ts  dom.ts  settings.test.ts  settings.ts  types.ts  watcher.ts
src/ui/backups/: dialog.test.ts  dialog.ts  render.test.ts  render.ts
