[package]
name = "app"
version = "0.1.0"
description = "ITD ODD Save Manager"
authors = ["andromarces"]
license-file = "../LICENSE.md"
repository = ""
edition = "2021"
rust-version = "1.93.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
sysinfo = "0.38.0"
notify = "8.2.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
